k8s/production/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: flask-app
  namespace: production

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask-app

  template:
    metadata:
      labels:
        app: flask-app

    spec:
      containers:
        - name: flask-app
          image: 485141927791.dkr.ecr.eu-west-1.amazonaws.com/project-7-eks-ecr:c1a50ab0b916abb09f7452bf87b9d23a552b8411

          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "256Mi"
              cpu: "256m"

            limits:
              memory: "512Mi"
              cpu: "512m"

          livenessProbe:
            httpGet:
              path: /live
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
